change: optimize query sql, clean code; fix: n+1 for shipments product; test: overwrite changes